Mon Aug  4 13:53:42 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bignum.c (rb_big2str0, bigsqr): made interruptible.  [ruby-Bugs-20622]

Mon Aug  4 13:31:41 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* numeric.c (check_uint, rb_num2uint, rb_fix2uint): fixed wrong check
	  about 64bit positive value.
Mon Aug  4 13:31:41 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* numeric.c (check_uint, rb_num2uint, rb_fix2uint): strict check.
	  fixed [ruby-dev:33683]

Thu Jul 17 21:42:07 2008  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* lib/net/smtp.rb (Net::SMTP::start): revert to avoid RFC2821
	  violation. [ruby-dev:35487]

Thu Jul 17 21:32:49 2008  Tanaka Akira  <akr@fsij.org>

	* string.c (rb_str_format_m): make tmp volatile to avoid possible GC
	  problem.

Thu Jul 17 21:30:55 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/optparse.rb (OptionParser#environment): requires shellwords.
	  [ruby-dev:35466]

Thu Jul 17 02:05:10 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/xmlrpc/client.rb (XMLRPC::Client#do_rpc): requires
	  webrick/cookie.  [ ruby-Bugs-21139 ]

Thu Jul 17 01:38:31 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* ext/zlib/zlib.c (rb_gzfile_set_mtime): fix typo.  [ruby-core:17713]

Sun Jul 13 00:08:16 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/ipaddr.rb (IPAddr#initialize): get rid of ArgumentError in
	  IPAddr#to_range.  a patch from okkez <okkez000 AT gmail.com> in
	  [ruby-dev:35091].

Sun Jul 13 00:04:38 2008  Tanaka Akira  <akr@fsij.org>

	* configure.in (erfc): erfc of glibc comes with Debian GNU/Linux Etch
	  on IA64 is broken.  erfc(10000.0) aborts.
	  use missing/erf.c instead.
	  http://sources.redhat.com/ml/libc-hacker/2005-08/msg00008.html

Thu Jul 10 18:50:48 2008  Tanaka Akira  <akr@fsij.org>

	* common.mk (SPEC_GIT_BASE): update RubySpec GIT URL.

Thu Jul 10 18:46:28 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_file_s_extname): fix for file name with spaces.
	  [ruby-talk:307404]
